2009-06-15  Alan McGovern  <amcgovern@novell.com>

	* frameworkelement.cpp: Back that change out as it causes some
	  regressions in the moon-unit tests.

2009-06-15  Alan McGovern  <amcgovern@novell.com>

	* frameworkelement.cpp: We can hit an element in both stroke
	  and fill.

2009-06-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* playlist.cpp|h: When a media reports that it has been opened
	successfully, check if we're the current element, and if not,
	don't to anything more until we are the current element. This
	fixes an issue with server side playlists where they would
	only play the first entry.

	* pipeline.cpp|h: Move code out of header.

	* pipeline-asf.cpp|h: Inform the MmsPlaylistEntry whenever an
	entry has finished.

2009-06-15  Alan McGovern  <amcgovern@novell.com>

	* frameworkelement.cpp: We're hittesting the clip, we use
	  user-space coordinates, so apply the identity matrix to get
	  the correct result.

2009-06-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.h: Expose MediaFrame::IsKeyFrame to C.

	* cbinding.cpp|h: Regenerated.

2009-06-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* enums.cpp: Rename MediaElementState -> MediaState. Add 'Paused'
	to the enum->str conversion table.

2009-06-15  Alan McGovern  <amcgovern@novell.com>

	* mediaplayer.cpp: The MediaPlayer should ref the MediaElement
	  it's attached to otherwise it can access the element after
	  the element has been destroyed. Stops 238 crashing.

2009-06-14  Andreia Gaita  <avidigal@novell.com>

	* value.[h.in|cpp]: (CreateUnref*) Accept EventObject instead of DPs, since 
	there are certain refcounted objects that aren't child classes of
	DependencyObject.
	Wrap null objects but don't try to unref them.
	* value.h: regen

2009-06-14  Andreia Gaita  <avidigal@novell.com>

	* debug.[h|cpp]: add max frame arg for finer control when getting 
	stack traces

2009-06-12  Jackson Harper  <jackson@ximian.com>
